--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ archives_base_name=Timaviciix's_Easy_Book_Management
 
 # Dependencies
 fabric_version=0.92.3+1.20.1
+
+#owo-version
+owo_version=0.11.3+1.20.2
