--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,10 @@ pluginManagement {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
+		maven {
+			name = "owo"
+			url = "https://maven.wispforest.io"
+		}
 		mavenCentral()
 		gradlePluginPortal()
 	}
