--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'fabric-loom' version '1.9-SNAPSHOT'
     id 'maven-publish'
     id "org.jetbrains.kotlin.jvm" version "2.1.0"
-    id "org.jetbrains.kotlin.kapt" version "2.1.0"
+    id 'com.google.devtools.ksp' version '2.1.0-1.0.29'
 }
 
 version = project.mod_version
@@ -52,10 +52,8 @@ dependencies {
     // sentinel will warn them and give the option to download it automatically
     include "io.wispforest:owo-sentinel:${project.owo_version}"
 
-    //Kotlin kapt
-    implementation("com.google.auto.service:auto-service-annotations:1.0")
-    kapt("com.google.auto.service:auto-service:1.0")
 }
+
 
 processResources {
     inputs.property "version", project.version
