--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ repositories {
         name = "owo"
         url = "https://maven.wispforest.io"
     }
+    maven {
+        url "https://www.cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 fabricApi {
@@ -51,6 +57,9 @@ dependencies {
     // include this if you don't want force your users to install owo
     // sentinel will warn them and give the option to download it automatically
     include "io.wispforest:owo-sentinel:${project.owo_version}"
+
+    //Jade
+    modImplementation "curse.maven:jade-324717:${project.jade_id}"
 
 }
 
