--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        name = "lss233 Fabric Mirror"
+        url = "https://lss233.littleservice.cn/"
+    }
 }
 
 fabricApi {
