--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ repositories {
         }
     }
     maven {
+        name = "CottonMC"
+        url = "https://server.bbkr.space/artifactory/libs-release"
+    }
+    maven {
         name = 'GeckoLib'
         url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
         content {
@@ -82,6 +86,9 @@ dependencies {
     //Gecko
     modImplementation("software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${project.gecko_version}")
     implementation("com.eliotlash.mclib:mclib:20")
+
+    //Lib GUI
+    modImplementation include("io.github.cottonmc:LibGui:${project.lib_gui_version}")
 
 }
 
