--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.9
 fabric_kotlin_version=1.13.0+kotlin.2.1.0
 
 # Mod Properties
-mod_version=0.5.1
+mod_version=0.6.5+1.20.1
 maven_group=cn.timaviciix.ebm
 archives_base_name=Timaviciix's_Easy_Book_Management
 
