--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
     id "org.jetbrains.kotlin.jvm" version "2.1.0"
     id 'com.google.devtools.ksp' version '2.1.0-1.0.29'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.0'
 }
 
 version = project.mod_version
@@ -61,6 +62,12 @@ fabricApi {
 }
 
 dependencies {
+
+    //DOM4J
+    implementation("org.dom4j:dom4j:2.1.4")
+
+    //Kotlin Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
